[BUGFIX] Content not centered properly

--- a/Resources/Public/como.css
+++ b/Resources/Public/como.css
@@ -3,10 +3,17 @@ body {
   background: transparent url(img/background.png);
   color: #fff;
   font-family: Source Sans Pro;
+  margin: 0;
+}
+body .container {
+  width: 960px;
+  margin: 0 auto;
+  position: relative;
+  height: 790px;
 }
 body .logo {
   position: absolute;
-  left: 300px;
+  left: 80px;
   top: 0;
   background: transparent url(img/logoTab.png);
   width: 119px;
@@ -18,11 +25,11 @@ body .month {
   font-weight: 200;
   position: absolute;
   top: 93px;
-  left: 416px;
+  left: 250px;
 }
 body .notice {
   position: absolute;
-  left: 323px;
+  left: 100px;
   top: 160px;
   font-weight: 200;
   font-size: 26px;
@@ -31,8 +38,8 @@ body .notice {
 body .current {
   position: absolute;
   top: 100px;
-  left: 650px;
-  width: 600px;
+  right: 80px;
+  width: 300px;
   text-align: center;
 }
 body .current img {
@@ -49,7 +56,7 @@ body .current .crown {
   height: 134px;
   position: absolute;
   top: -84px;
-  right: 155px;
+  right: 0;
   z-index: -1;
 }
 body .current p {
@@ -77,6 +84,7 @@ body .topicAwards {
   width: 100%;
   height: 200px;
   text-align: center;
+  clear: both;
 }
 body .topicAwards .bx-wrapper {
   display: inline-block;
